# bellande_functionality_model

./: README.md
.github/workflows/: docker-image.yml  main.yml
docker/: Dockerfile.ros2
model_bellande_2d_computer_vision/: CMakeLists.txt  package.xml
model_bellande_2d_computer_vision/launch/: bellande_2d_computer_vision_api.launch.py
model_bellande_3d_computer_vision/: CMakeLists.txt  package.xml
model_bellande_speech_detection/: CMakeLists.txt  package.xml
model_bellande_speech_detection/src/: bellande_speech_detection_api.py
model_bellande_step/: CMakeLists.txt  README.md  package.xml  setup.py
model_bellande_step/config/: configs.json
ros_bellande_2d_computer_vision_models/: CMakeLists.txt  package.xml
ros_bellande_3d_computer_vision_models/: CMakeLists.txt  package.xml
ros_bellande_adaptive_alternate_path_creation_models/: CMakeLists.txt  package.xml
ros_bellande_adaptive_alternate_path_creation_models/script/: build.sh
ros_bellande_adaptive_continuious_controller_models/: CMakeLists.txt  package.xml
ros_bellande_extremum_optimization_models/: CMakeLists.txt  package.xml
ros_bellande_motion_probabilistic_models/: CMakeLists.txt  package.xml  setup.py
ros_bellande_motion_probabilistic_models/launch/ros1/: bellande_step_api_2d.launch
ros_bellande_search_path_models/: CMakeLists.txt  package.xml
ros_bellande_speech_detection_models/: CMakeLists.txt  package.xml
ros_bellande_step_models/: CMakeLists.txt  package.xml
ros_bellande_step_models/launch/: bellande_step_model_2d.launch.py
ros_bellande_step_models/launch/ros1/: bellande_step_model_2d.launch
ros_bellande_step_models/script/: build.sh
